Switch to google fonts from adobe typekit

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: 'aktiv-grotesk', sans-serif;
+  font-family: 'Roboto', 'Roboto Mono';
   font-size: 14px;
   line-height: 16px;
   color: #4A4A4A;
