--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
 .App {
-  font-family: 'Roboto', 'Roboto Mono';
-  font-size: 14px;
-  line-height: 16px;
-  color: #4A4A4A;
+  text-align: center;
 }
 
-.g-row {
-  margin: 0 auto;
-  max-width: 960px;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+.App-header {
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: white;
+}
+
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
